<resources>
    <string name="app_name">BRBT</string>
    <string name="home">главное меню</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Привет пустой фрагмент</string>
    <string name="active">Активный</string>
    <string name="archive">Архив</string>
    <string name="dashboard">Приборная панель</string>
    <string name="stadiums">Стадионы</string>
    <string name="mapKey" translatable="false">AIzaSyBGxa1BZRvZeCA00GNeFE2CIIY-QJqr04c</string>
    <string name="welcome">Добро пожаловать</string>
    <string name="request_code_again">Eщё раз через</string>
    <string name="timer">00:59</string>
    <string name="confirm_code_again">Отправить код еще раз</string>
    <string name="password">Пароль</string>
    <string name="login">Авторизоваться</string>
    <string name="create_account">Зарегистрироваться</string>
    <string name="createOrder">Создать заказ</string>
    <string name="summa">Сумма:</string>
    <string name="day">День</string>
    <string name="start_date">Дата начала</string>
    <string name="end_date">Конечная дата</string>
    <string name="createStadium">Создать стадион</string>
    <string name="adress_stadium">Адрес Стадион</string>
    <string name="name_stadium">Название Стадион</string>
    <string name="time_open">Время открыто</string>
    <string name="time_close">время закрытия</string>
    <string name="price_day">дневная цена</string>
    <string name="price_night">ночная цена</string>
    <string name="when_start_night_time">Когда начнется ночное время?</string>
    <string name="width_stadium">Ширина стадиона</string>
    <string name="height_stadium">Высота стадиона</string>
    <string name="add_stadium">Добавить стадион</string>
    <string name="arxiv_bo_sh">🤷‍♂️</string>
    <string name="hali_stadion_qo_shmagan_ekansiz">У тебя нет стадиона</string>
    <string name="choose_location">Выберите место</string>
    <string name="choose">Выбирать</string>
    <string name="orderlar_yo_q">нет заказов</string>
    <string name="register">Регистрация</string>
    <string name="phone_number">Телефонный номер</string>
    <string name="confirm_password">Подтвердить Пароль</string>
    <string name="we_have_sent_verification_code_nto_998">We have sent verification code \nto:*998 ** ***</string>
    <string name="please_enter_verification_code">Введите проверочный код!</string>
    <string name="verification_code">Проверяющий код</string>
    <string name="sent_again">Отправлено снова</string>
    <string name="send">Отправить</string>
    <string name="user_name">Имя пользователя</string>
    <string name="phone_1">Телефон 1</string>
    <string name="phone_2">Телефон 2</string>
    <string name="so_m">сўм</string>
    <string name="qabul_qilish">Принимать</string>
    <string name="rad_etish">Отклонение</string>
    <string name="stadion_name">Стадион Наме</string>
    <string name="update">Обновлять</string>
    <string name="password_should_same">Пароль должен быть таким же</string>
    <string name="add_image">Добавить изображение</string>
    <string name="error">Ошибка</string>
    <string name="pease_try_again">Ошибка, пожалуйста, попробуйте еще раз</string>
    <string name="vaqt_kiritishda_xatolik">Ошибка ввода времени</string>
    <string name="update_stadium">Обновить стадион</string>
    <string name="success">Успешно!</string>
    <string name="wrong">Неправильный</string>
    <string name="delete">Удалить</string>
    <string name="are_you_sure">Вы хотите удалить этот стадион!</string>
    <string name="no">Нет</string>
    <string name="yes">Дa</string>
    <string name="exit">Выход</string>
    <string name="do_you_want_to_exit">Вы хотите выйти!</string>
    <string name="please_choose_location">Пожалуйста, выберите расположение стадиона</string>
    <string name="enter_fields">Пожалуйста, введите поля</string>
    <string name="orders">Заказы</string>
    <string name="success_register">Вы успешно зарегистрировались!</string>
    <string name="are_you_sure_delete_image">Вы хотите удалить это фото?</string>
    <string name="cancel">Отмена</string>
    <string name="cancel_order">Вы хотите отменить этот заказ?</string>
    <string name="warning">Предупреждение</string>
    <string name="to_brbt">по соображениям безопасности вы будь первым, кто откроет для себя стадион через:</string>
    <string name="enter_phone_number">Введите номер телефона</string>
    <string name="confirmation">Подтверждать</string>
    <string name="create_password">Создать пароль</string>
    <string name="forgot_password">Забыли Ваш пароль?</string>
    <string name="forgot_error_text">Что-то пошло не так.</string>
    <string name="indoors_outdoor">Indoors Outdoor</string>
    <string name="outdoor">Outdoor</string>
    <string name="indoors">Indoors</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="successful_orders">Successful orders</string>
    <string name="failed_orders">Failed orders</string>
    <string name="number_of_visits">Number of visits</string>
    <string name="payment">Payment</string>
    <string name="enter_the_password">Enter the 6 digit password</string>
    <string name="your_balance">Your Balance:</string>
    <string name="o_zbek">O\'zbek</string>
    <string name="russia">Russia</string>
    <string name="kirill">Ўзбек</string>
    <string name="til_o_zgartirish">Til o\'zgartirish</string>
    <string name="count_order">Count Order</string>
    <string name="search_order">Search order</string>
</resources>