<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    tools:context=".ui.screens.auth.register.PhoneNumberFragment">

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="11dp"
        android:indeterminateBehavior="repeat"
        android:indeterminateDuration="10"
        android:indeterminateOnly="true"
        android:maxHeight="24dip"
        android:minHeight="24dip"
        android:progressBackgroundTint="#208afa"
        android:progressBackgroundTintMode="multiply"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginStart="24dp"
        android:layout_marginTop="@dimen/_62sdp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/robotomedium"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/stadion_color"
        android:textSize="@dimen/_30sdp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/linear_input_1"
        style="@style/Text_Input_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_welcome"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="@dimen/_46sdp"
        android:layout_marginEnd="24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_baseline_phone_android"
            android:drawablePadding="12dp"
            android:hint="@string/phone_number"
            android:imeOptions="actionNext"
            android:inputType="phone"
            android:maxLength="17">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/linear_input_2"
        style="@style/Text_Input_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_input_1"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="@dimen/_32sdp"
        android:layout_marginEnd="24dp"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_baseline_lock"
            android:drawablePadding="12dp"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="16">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_input_2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="24dp">

        <TextView
            android:id="@+id/tx_forgotError"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="8dp"
            android:layout_toStartOf="@+id/tx_forgotPassword"
            android:text="@string/forgot_error_text"
            android:textColor="@color/red_brbt"
            android:textSize="14sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tx_forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="?selectableItemBackground"
            android:text="@string/forgot_password"
            android:textColor="#033FF4"
            android:textSize="14sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linear_input_2"
        android:layout_marginStart="24dp"
        android:layout_marginTop="@dimen/_75sdp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/btn_back_order"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:layout_marginStart="24dp"
        android:layout_marginTop="@dimen/_21sdp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/btn_back"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@color/stadion_color" />

</RelativeLayout>